# ping-connectivity

./: .gitignore  README.md
.github/workflows/: release.yml
plans/: ping-connectivity-plan.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/logging/: json_logger.rs  mod.rs
src-tauri/src/ping/: mod.rs  pinger.rs
src-tauri/src/stats/: calculator.rs  mod.rs
